--- a/main.tex
+++ b/main.tex
@@ -174,13 +174,26 @@
 \section{Work Experience}
   \resumeSubHeadingListStart
 
+
     \resumeSubheading
-      {Bar Staff}{2018 -- Present}
+        {Helpdesk}{Nov 2020 -- Dec 2022}
+        {Currys PC World}{}
+        \resumeItemListStart
+            \resumeItem{Solved bugs and hardware/software issues with the team and solo}
+            \resumeItem{Answered phone calls and dealt with customers face to face}
+            \resumeItem{Worked computer sales, guiding customers to the parts and builds that would benefit them the most and used the system to finalize the sales.}
+        \resumeItemListEnd
+        
+
+
+    \resumeSubheading
+      {Bar Staff}{2016 -- 2020}
       {Various}{ }
       \resumeItemListStart
         \resumeItem{Worked as part of a close-knit team in a variety of locations, learning invaluable teamwork and communication skills}
-        \resumeItem{Developed my skills enough to lead a team alone in a busy work environment on numerous occassions}
+        \resumeItem{Developed my skills enough to lead a team alone in a busy work environment on numerous occasions}
       \resumeItemListEnd
+      
 \resumeSubHeadingListEnd
 
 
