--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 % Custom commands
 \newcommand{\resumeItem}[1]{
   \item\small{
-    {#1 \vspace{-2pt}}
+    {#1 \vspace{-3pt}}
   }
 }
 
@@ -118,7 +118,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {York St. John University}{York}
-      {Bachelor of Science in Software Engineering}{Sept. 2020 -- July 2024}
+      {Bachelor of Science (with hons) in Software Engineering}{Sept. 2020 -- July 2024}
   \resumeSubHeadingListEnd
 
 %
@@ -127,9 +127,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Python, C/C++, Java, SQL, JavaScript, HTML/CSS, Bash} \\
+     \textbf{Languages}{: Python, C Sharp, C, JavaScript, HTML/CSS, Bash} \\
      \textbf{}{}\\
-     \textbf{Tools/Frameworks}{: Git, VS Code, Visual Studio, Eclipse, MySQL, Android Studio, Linux} \\
+     \textbf{Frameworks/Libraries}{: .NET, Typescript, React, numPy, scikit, scipy } \\
     }}
  \end{itemize}
  
@@ -138,21 +138,24 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
+
     
       \resumeProjectHeading
           {\textbf{VG Sales Estimator} $|$ \emph{Python, Machine Learning, AI}}{May 2024}
           \resumeItemListStart
             \resumeItem{Developed a machine learning algorithm to analyse and report on the relationship between certain video game attributes in order to maximise profit}
-            \resumeItem{Cleansed and transformed data in order for it to be mroe suitable to my tasks}
-            \resumeItem{Visualized and layed out data in an easy to understand way}
+            \resumeItem{Cleansed and transformed data in order for it to be more suitable to my tasks}
+            \resumeItem{Visualized and laid out data in an easy to understand way}
           \resumeItemListEnd
       \resumeProjectHeading
+      
           {\textbf{Cybercrime Security} $|$ \emph{Linux, Bash, C, Ethical Hacking}}{June 2024}
           \resumeItemListStart
             \resumeItem{Used bash scripts and C to find vulnerabilities in systems, websites, applications and exploit them}
             \resumeItem{Wrote a program in C to inject and run code on a target users PC through the network}
             \resumeItem{Analysed traffic from and performed a DOS attack on the network}
           \resumeItemListEnd
+          
        \resumeProjectHeading
           {\textbf{Soil Moisture Sensor} $|$ \emph{C++, Electrical Wiring, Software Management, IoT, Cloud}}{June 2024}
           \resumeItemListStart
@@ -160,6 +163,7 @@
             \resumeItem{Built and tested the code using C++ and real world sensors}
             \resumeItem{Built a system to send the readings to the end user and display them in a user-friendly manner}
           \resumeItemListEnd
+          
        \resumeProjectHeading
           {\textbf{Museum Booking App} $|$ \emph{JavaScript, Software Design, Android Studio, Kotlin}}{March 2022}
           \resumeItemListStart
@@ -176,8 +180,8 @@
 
 
     \resumeSubheading
-        {Helpdesk}{Nov 2020 -- Dec 2022}
-        {Currys PC World}{}
+        {Help desk}{Nov 2020 -- Dec 2022}
+        {Curry's PC World}{}
         \resumeItemListStart
             \resumeItem{Solved bugs and hardware/software issues with the team and solo}
             \resumeItem{Answered phone calls and dealt with customers face to face}
